# HydroForest

./: CMakeLists.txt  README.md  config.sh  environment.yml  main.cpp
examples/: CMakeLists.txt
examples/math597-P1/: CMakeLists.txt  main.cpp  writeup.ipynb
examples/math597-P2/: CMakeLists.txt  main.cpp  writeup.ipynb
examples/math597-P3/: CMakeLists.txt  main.cpp  writeup.ipynb
examples/math597-P4/: CMakeLists.txt  main.cpp  writeup.ipynb
examples/math597-P4/assets/: advection.mpg
examples/toybox/: CMakeLists.txt  main.cpp
src/: CGFiniteElements.hpp  CMakeLists.txt  DGFiniteElements.hpp  Element1D.hpp  Element2D.hpp  GenericSingleton.hpp  Grid1D.hpp  Grid1DBase.hpp  Grid2D.hpp  GridBase.hpp  HydroForestApp.hpp  InitialCondition.hpp  Logger.hpp  Matrix.hpp  Memory.hpp  Mesh1D.hpp  Mesh2D.hpp  NewtonRaphsonSolver.hpp  NodalPoints.hpp  Norms.hpp  Options.cpp  Options.hpp  P4est.cpp  P4est.hpp  Polynomial.hpp  PolynomialBasis.hpp  SpaceVector.hpp  TimeIntegration.hpp  Timer.hpp  UniformGrid1D.hpp  VTKBuilder.cpp  VTKBuilder.hpp  Vector.hpp  XMLTree.hpp
test/: CMakeLists.txt  test_matrix.cpp  test_vector.cpp
